# jav-nfo-creator

./: README.md  build_release.ps1  build_release_x86.ps1  pyproject.toml
app/: batch_actor_editor.py  batch_main.py  combined_app.py  main.py  movie_nfo_editor.py  version.py
tests/: test_batch_actor_editor.py  test_main.py  test_movie_nfo_editor.py
