[project]
name = "jav-nfo-creator"
version = "0.1.0"
description = "Tkinter desktop app for creating and editing JAV NFO metadata files."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Pillow>=12.2.0"]

[project.scripts]
jav-nfo-creator = "app.movie_nfo_editor:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
