[project]
name = "jav-nfo-creator"
version = "1.0.0.1"
description = "Windows desktop app for creating JAV NFO files, saving artwork, and batch-updating actor metadata."
readme = "README.md"
requires-python = ">=3.11"
dependencies = ["Pillow>=12.2.0"]

[project.scripts]
movie-nfo-editor = "app.movie_nfo_editor:run"
movie-tools = "app.combined_app:run"
batch-actor-editor = "app.batch_actor_editor:run"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"
